fix gap option to margin and space-between for flex elements

--- a/05/Homework/css/style.css
+++ b/05/Homework/css/style.css
@@ -223,7 +223,7 @@ body {
 
 /* Контейнер для основного контента */
 .modules {
-  margin: 0 0 50px 0;
+  margin: 0 0 25px 0;
 }
 
 /* Заголовок списка модулей */
@@ -241,8 +241,7 @@ body {
 .modules-list {
   display: flex;
   flex-flow: row wrap;
-  /* justify-content: space-between; */
-  gap: 25px;
+  justify-content: space-between;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -251,8 +250,8 @@ body {
 /* Элемент списка */
 .modules-list-item {
   position: relative;
-  margin: 0;
-  padding: 205px 0 0 0;
+  margin: 0 0 25px;
+  padding: 180px 0 0 0;
   min-width: 572px;
   min-height: 505px;
   background-position: top;
@@ -285,9 +284,11 @@ body {
 .module-description {
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
+  margin: 0;
+  padding: 25px;
   max-width: 522px;
-  max-height: 275px;
+  min-height: 275px;
+  word-wrap: break-word;
 }
 
 /* Заголовок элемента списка */
@@ -336,6 +337,8 @@ body {
   display: block;
   margin: 0 auto;
   padding: 25px 75px;
+  max-width: 275px;
+  min-height: 70px;
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
